# grayb

./: .gitignore  .grayb_vimprj  .vimprj_graybdocs  Makefile.am  README.md  configure.ac  libgrayb.pc.in
clm/: Makefile.am  main.cpp  monitor.cpp  monitor.h
doc/design/: .grayb_design.xml.swn  Makefile  grayb_design.xml
doc/design/pics/pics_src/: long_poll_observer.odg  pia_iface_rsl.odg  pic_active_renva.odg  pic_chromo_opt_cont.odg  pic_daa_ptp.odg  pic_daa_px_dup.odg  pic_daa_ref.odg  pic_daa_ref_a.odg
doc/design/uml_mdl/fap2_uml/: 128003  128003.diagram  128005  128005.diagram  128131  128133  128133_5.d  128259  128261  128261.diagram  128389  128389.diagram  128517  128517.diagram  128645  fap2_uml.prj
doc/requirements/: Makefile  fap2_req.xml
etc/: objspec.dtd  objspec_s1.dtd
modules/: adp.chs  capsula.chs  capsula.xml  data.chs  data.xml  des.chs  des.xml  func.chs  func.xml  srcust.xml  syst.chs  syst.xml  vector.xml  vis.xml
src/: Makefile.am  base.cpp  base.h  capsule.cpp  capsule.h  chromo.cpp  chromo.h  chromo2.cpp  chromo2.h  chromox.cpp  chromox.h  data.cpp  data.h  des.cpp  des.h  edge.cpp  edge.h  elem.cpp  elem.h  env.cpp  env.h  factr.cpp  factr.h  func.cpp  func.h  graph.cpp  graph.h  guri.cpp  guri.h  hnode.cpp  hnode.h  ifu.cpp  ifu.h  imports.cpp  imports.h  incaps.cpp  incaps.h  log.cpp  log.h  mchromo.h  (+55 more)
test/: Makefile.am  gmon.out  ut_baseapis1.xml  ut_cache_inv_magent_saved.xml  ut_chr2_1.chs  ut_chr2_combo.chs  ut_chr2_combo.xml  ut_chr2_conv.chs  ut_chr2_conv.xml  ut_chr2_cre1.chs  ut_chr2_dmc_1.chs  ut_chr2_dmc_2.chs  ut_chr2_dmc_3.chs  ut_chr2_dmc_4.chs  ut_chr2_ns.chs  ut_chr2_tf1.chs  ut_chr2_tf2.chs  ut_chromo2.cpp  ut_compact1.xml  ut_compact1_res.xml  ut_compact2.xml  ut_compact2_res.xml  ut_compact3.xml  ut_compact_cont.xml  ut_compact_ref1.xml  ut_compact_rmda.xml  ut_conn.cpp  ut_conn_1.xml  ut_conn_2.xml  ut_conn_cpextd_1.chs  ut_conn_sock.xml  ut_conn_sock2.xml  ut_conn_sock_mcm.xml  ut_conn_sock_mcmu.xml  ut_conn_sock_mcmu_tc.chs  ut_conn_systp_1.xml  ut_conn_systp_2.xml  ut_conn_systp_sock.xml  ut_conn_vertp_1.xml  ut_cre.cpp  (+100 more)
test/modules/: ut_mod_4.chs  ut_mod_4.xml  ut_mod_int_1m.chs  ut_mod_int_1m.xml  ut_mod_int_3m.chs  ut_mod_int_3m.xml
test/modules2/: ut_mod5.chs  ut_mod5.xml  ut_mod_int_2m.chs  ut_mod_int_2m.xml  ut_mod_int_3m.chs  ut_mod_int_3m.xml
