pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgrayb.pc

SUBDIRS = src test clm

sconfdir = $(pkgdatadir)/conf
dist_sconf_DATA = \
	     etc/objspec.dtd

modulesdir = $(pkgdatadir)/modules
dist_modules_DATA = \
	     modules/syst.xml \
	     modules/capsula.xml \
	     modules/data.xml \
	     modules/func.xml \
	     modules/des.xml \
	     modules/vis.xml 


EXTRA_DIST = \
	     etc/objspec.dtd \
	     modules/syst.xml \
	     modules/capsula.xml \
	     modules/data.xml \
	     modules/func.xml \
	     modules/des.xml 

