includedir = @includedir@/grayb

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0

lib_LTLIBRARIES = libgrayb.la

libgrayb_la_SOURCES = \
		       plat.h \
		       base.cpp \
		       base.h \
		       guri.cpp \
		       guri.h \
		       chromo.cpp \
		       chromo.h \
		       chromox.cpp \
		       chromox.h \
		       mchromo.h \
		       mlog.h \
		       log.cpp \
		       log.h \
		       menv.h \
		       env.cpp \
		       env.h \
		       mprov.h \
		       prov.cpp \
		       prov.h \
		       provdef.cpp \
		       provdef.h \
		       factr.cpp \
		       factr.h \
		       mgraph.h \
		       mvert.h \
		       medge.h \
		       vert.h \
		       vert.cpp \
		       edge.h \
		       edge.cpp \
		       melem.h \
		       elem.h \
		       elem.cpp \
		       mprop.h \
		       prop.h \
		       prop.cpp \
		       mdata.h \
		       data.h \
		       data.cpp \
		       syst.h \
		       syst.cpp \
		       incaps.h \
		       incaps.cpp \
		       func.h \
		       func.cpp \
		       des.h \
		       des.cpp \
		       mmuta.h \
		       mconn.h \
		       graph.cpp \
		       graph.h 


include_HEADERS = \
		  plat.h \
		  base.h \
		  chromo.h \
		  melem.h \
		  mchromo.h \
		  medge.h \
		  mlog.h \
		  mmuta.h \
		  mprop.h \
		  mconn.h \
		  mvert.h \
		  log.h \
		  menv.h \
		  mdes.h \
		  env.h \
		  guri.h \
		  mprov.h \
		  prov.h \
		  mgraph.h \
		  elem.h \
		  syst.h \
		  prop.h \
		  vert.h \
		  edge.h \
		  incaps.h \
		  graph.h 


libgrayb_la_LDFLAGS = -rdynamic -no-undefined
