includedir = @includedir@/grayb

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0 -pthread

lib_LTLIBRARIES = libgrayb.la

libgrayb_la_SOURCES = \
		       plat.h \
		       base.cpp \
		       base.h \
		       guri.cpp \
		       guri.h \
		       module.cpp \
		       module.h \
		       imports.cpp \
		       imports.h \
		       chromo.cpp \
		       chromo.h \
		       chromo2.cpp \
		       chromo2.h \
		       chromox.cpp \
		       chromox.h \
		       mchromo.h \
		       mchromo2.h \
		       mlog.h \
		       log.cpp \
		       log.h \
		       menv.h \
		       ifu.cpp \
		       ifu.h \
		       env.cpp \
		       env.h \
		       mprov.h \
		       prov.cpp \
		       prov.h \
		       provdef.cpp \
		       provdef.h \
		       factr.cpp \
		       factr.h \
		       mvert.h \
		       medge.h \
		       vert.h \
		       vert.cpp \
		       edge.h \
		       edge.cpp \
		       melem.h \
		       unit.h \
		       unit.cpp \
		       elem.h \
		       elem.cpp \
		       mprop.h \
		       prop.h \
		       prop.cpp \
		       mdata.h \
		       data.h \
		       data.cpp \
		       syst.h \
		       syst.cpp \
		       systp.h \
		       systp.cpp \
		       incaps.h \
		       incaps.cpp \
		       func.h \
		       func.cpp \
		       des.h \
		       des.cpp \
		       rdata.h \
		       rdata.cpp \
		       rmutdata.h \
		       rmutdata.cpp \
		       miface.h \
		       mmuta.h \
		       mplugin.h \
		       mvertp.h \
		       vertp.h \
		       vertp.cpp \
		       mprofiler.h \
		       profiler.h \
		       profiler.cpp \
		       profiler_events.h \
		       profiler_events.cpp \
		       mnt.h \
		       mnt.cpp \
		       mmod.h

include_HEADERS = \
		  plat.h \
		  base.h \
		  chromo.h \
		  munit.h \
		  melem.h \
		  mchromo.h \
		  mchromo2.h \
		  chromo2.h \
		  medge.h \
		  mlog.h \
		  miface.h \
		  mmuta.h \
		  mplugin.h \
		  mmod.h \
		  mprop.h \
		  mlauncher.h \
		  mvert.h \
		  log.h \
		  menv.h \
		  mdata.h \
		  mdes.h \
		  env.h \
		  guri.h \
		  mprov.h \
		  prov.h \
		  unit.h \
		  elem.h \
		  syst.h \
		  prop.h \
		  vert.h \
		  edge.h \
		  rdata.h \
		  ifu.h \
		  rmutdata.h \
		  des.h \
		  func.h \
		  msyst.h \
		  mprofiler.h \
		  profiler.h \
		  data.h \
		  incaps.h


libgrayb_la_LDFLAGS = -rdynamic -no-undefined -lrt
